--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -1,4 +1,5 @@
 .navWrapper {
+    z-index: 40;
     position: fixed;
     display: flex;
     align-items: center;
@@ -14,4 +15,8 @@
     display: flex;
     height: 100%;
     gap: 2rem;
+}
+.navItems:hover{
+    font-weight: bold;
+    transition: font-size .3s ease-in-out;
 }
