--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,37 +10,33 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
 
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+  --grey-text: #8d8d8d;
 
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  
 }
 
+html {
+  font-size: 100%; /* 100% = 16px */
+}
+h1 {
+  font-size: 4em; /* 2.197 × 16px = 35px; obtenido de (1.3)³em */
+}
+h2 {
+  font-size: 3em; /* 1.69em × 16px = 27px; obtenido de 2.197/1.3 */
+}
+h3 {
+  font-size: 2em; /* 1.3em × 16 = 21px; obtenido de 1.69/1.3 */
+}
+small, .small {
+  font-size: 0.77em /* 0.77em × 16 = 12.32px; obtenido de 1/1.3 */
+}
+@media (max-width: 700px) {
+  html {
+    font-size: 0.85em; /* 16px */
+  }
+
+}
 
 * {
   box-sizing: border-box;
@@ -53,6 +49,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  color: #181818;
 }
 
 a {
